--- a/notebooks/1.0-sy-initial-exploratory-analysis.ipynb
+++ b/notebooks/1.0-sy-initial-exploratory-analysis.ipynb
@@ -9,6 +9,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Business Understanding\n",
+    "We start with understanding the problem, clearly defining objectives, success criteria and deliverables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
