complete initial EDA

--- a/notebooks/1.1-sy-indept-EDA-and-data-cleaning.ipynb
+++ b/notebooks/1.1-sy-indept-EDA-and-data-cleaning.ipynb
@@ -23,10 +23,9 @@
     "NB: starred questions is not answered with visualizations. Answers to them improves quality of data and analysis. \n",
     "\n",
     "outcomes:\n",
-    "- Insights on trends and patterns used to propose recommendation. \n",
-    "- Insights to inform decisions during data cleaning and model building\n",
-    "- Visualizations for powerbi deployment and article\n",
-    "- data cleaning steps obtained to create python script to automate cleaning. "
+    "- Insights on trends, patterns and relationships. useful for proposing recommendations, informed decision making during data cleaning, feature engineering etc.  \n",
+    "- Visualizations for powerbi deployment, article and reports. \n",
+    "- Data cleaning steps obtained to create python script to automate cleaning. "
    ]
   },
   {
