--- a/notebooks/1.1-sy-indept-EDA-and-data-cleaning.ipynb
+++ b/notebooks/1.1-sy-indept-EDA-and-data-cleaning.ipynb
@@ -30,15 +30,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Importations\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib as mpl \n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Load datasets\n",
+    "train = pd.read_csv(\"../data/raw/train.csv\", \n",
+    "                   dtype={\n",
+    "                       \"store_nbr\":\"category\", \n",
+    "                       \"family\":\"category\",\n",
+    "                       \"sales\":\"float64\",\n",
+    "                        \"id\":\"int32\",\n",
+    "                        \"onpromotion\":\"int32\"\n",
+    "                       },\n",
+    "                   index_col=[\"date\"], \n",
+    "                   parse_dates=True)\n",
+    "\n",
+    "test = pd.read_csv(\"../data/raw/test.csv\", \n",
+    "                   dtype={\n",
+    "                       \"store_nbr\":\"category\", \n",
+    "                       \"family\":\"category\",\n",
+    "                       \"sales\":\"float64\",\n",
+    "                        \"id\":\"int32\",\n",
+    "                        \"onpromotion\":\"int32\"\n",
+    "                       },\n",
+    "                   index_col=[\"date\"], \n",
+    "                   parse_dates=True)\n",
+    "\n",
+    "holiday_events = pd.read_csv(\"../data/raw/holiday_events.csv\", \n",
+    "                    dtype={\n",
+    "                        \"type\":\"category\",\n",
+    "                        \"locale\":\"category\",\n",
+    "                        \"locale_name\":\"category\",\n",
+    "                        \"description\":\"category\",\n",
+    "                        \"transferred\":bool\n",
+    "                    },\n",
+    "                    index_col=[\"date\"], \n",
+    "                    parse_dates=True, \n",
+    "                    date_format=\"%Y-%m-%d\")\n",
+    "holiday_events = holiday_events.drop(columns=holiday_events.columns[0])\n",
+    "\n",
+    "oil = pd.read_csv(\"../data/raw/oil.csv\", \n",
+    "                    index_col=[\"date\"], parse_dates=True, \n",
+    "                    date_format=\"%Y-%m-%d\" )\n",
+    "oil = oil.drop(columns=oil.columns[0])\n",
+    "\n",
+    "stores = pd.read_csv(\"../data/raw/stores.csv\", \n",
+    "                     dtype={\"store_nbr\":\"category\", \n",
+    "                            \"city\":\"category\",\n",
+    "                            \"state\":\"category\",\n",
+    "                            \"type\":\"category\",\n",
+    "                            \"cluster\":\"category\"\n",
+    "                            },\n",
+    "                     index_col=0)\n",
+    "\n",
+    "transactions = pd.read_csv(\"../data/raw/transactions.csv\", \n",
+    "                           dtype={\"store_nbr\":\"category\"},\n",
+    "                           index_col=[\"date\"],\n",
+    "                           parse_dates=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## lowest and highest sales dates for each year\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "store-sales",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
